--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: A. Isomura
+name: Akihiro Isomura, Ph.D.
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: at Kyoto Univ.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: aisomura@infront.kyoto-u.ac.jp
   facebook:
   flickr:
   github: barryclark/jekyll-now
